<resources>
    <string name="tfe_pe_app_name">Hamdo</string>
    <string name="tfe_pe_request_permission">This app needs camera permission.</string>
    <string name="tfe_pe_tv_score">Score: %.2f</string>
    <string name="tfe_pe_tv_model">Model: </string>
    <string name="tfe_pe_tv_fps">Fps: %d</string>
    <string name="tfe_pe_tv_device">Device: </string>
    <string name="tfe_pe_tv_classification_value">- %s</string>
    <string name="tfe_pe_tv_pose_classification">Action Classification</string>
    <string name="tfe_pe_tv_tracking">Tracker: </string>
    <string name="tfe_pe_gpu_error">Movenet MultiPose does not support GPU. Fallback to CPU.</string>
    <string name="drawer_open">Drawer opened</string>
    <string name="drawer_close">Drawer closed</string>
    <string-array name="tfe_pe_models_array">
        <item>Movenet Lightning</item>
        <item>Movenet Thunder</item>
        <item>Movenet MultiPose</item>
        <item>Posenet</item>
    </string-array>

    <string-array name="tfe_pe_device_name">
        <item>GPU</item>
        <item>CPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="tfe_pe_tracker_array">
        <item>Off</item>
        <item>BoundingBox</item>
        <item>Keypoint</item>
    </string-array>

    <string name="app_name">Hamdo</string>


    <string name="mainItem1">動作列表</string>
    <string name="mainItem2">訓練菜單</string>
    <string name="mainItem3">歷史紀錄</string>
    <string name="mainItem4">設定</string>

    <string name="startPracticing">開始練習</string>

    <string name="nextMotion">下一個動作</string>
    <string name="practiceAgain">再訓練一次</string>
    <string name="backToMenu">返回訓練菜單</string>
    <string name="backToMotionList">返回動作列表</string>
    <string name="storeData">儲存資料</string>
    <string name="motionName">動作名稱</string>
    <string name="practicedTime">已練習次數</string>
    <string name="accuracy">正確率</string>
    <string name="expectedPracticeTime">預計練習次數</string>
    <string name="practicedTimeS">已練習時間</string>
    <string name="expectedPracticeTimeS">預計練習時間</string>

    <string name="practiceTime">練習次數</string>
    <string name="practiceTimeS">練習時間</string>
    <string name="startTime">開始時間</string>
    <string name="select">選擇</string>

    <string name="stop">結束</string>

    <string name="times">次</string>
    <string name="seconds">秒</string>

    <string name="finishPractice">完成訓練</string>

    <string name="saveDataSuccess">儲存成功</string>
    <string name="saveDataFail">儲存失敗</string>
    <string name="watchDataAnalyzed">已分析手錶數據</string>

    <string name="plsInputPracticeTime">請輸入練習次數</string>
    <string name="plsInputPositiveInt">請輸入正整數！</string>

    <string name="motionMenUchi">正面劈刀</string>
    <string name="motionSuriAshi">擦足</string>
    <string name="motionWakiKiamae">托刀</string>
    <string name="motionDouUchi">右胴劈刀</string>


    <string-array name="menu">
        <item>菜單一;正面劈刀:5,擦足:2,托刀:10,右胴劈刀:5</item>
        <item>菜單二;托刀:10,擦足:2,正面劈刀:5,右胴劈刀:5</item>
        <item>菜單三;正面劈刀:10,右胴劈刀:10</item>
        <item>菜單四;托刀:10,正面劈刀:10</item>
        <item>菜單五;正面劈刀:3,右胴劈刀:3</item>
    </string-array>

    <string name="theresNRecords">%04d-%02d-%02d有%d筆訓練紀錄</string>

    <string-array name="PersonalInformation">
        <item>管理帳號</item>
    </string-array>

    <string-array name="settingsGeneral">
        <item>語言</item>
        <item>校準</item>
    </string-array>

    <string name="login">登入</string>
    <string name="signup">註冊</string>

    <string name="plsChooseLanguage">請選擇語言</string>

    <string name="confirm">確定</string>
    <string name="cancel">取消</string>

    <string-array name="video">
        <item>一、分解動作一</item>
        <item>二、分解動作二</item>
        <item>三、分解動作三</item>
        <item>四、分解動作四</item>
    </string-array>

    <string name="cameraInstruction">
        *請將手機放置於距離身前約1.5公尺處，確保畫面能包含使用者全身，並按照以下的指示進行練習。
    </string>

    <string name="menUchiInstruction_1">
        step.1中段姿勢:\n
        -左手握刀柄端部，對準自己的腹部中央(或中下)，離身體約一個拳頭的位置。\n
        -右手握刀柄上部，刀尖向正斜上方，對淮對手咽喉部位。
    </string>
    <string name="menUchiInstruction_2">
        step.2上段姿勢:\n
        -握劍方式與中段方式相同，不同處在於將竹劍舉至頭上，劍尖向上45度。
    </string>
    <string name="menUchiInstruction_3">
        step.3 揮劍:\n
        -揮劍軌跡順著身體中心線揮動，當竹劍揮至對手面部高度時停止竹劍揮動。
    </string>

    <string name="suriAshiInstruction_1">
        step.1\n
        -呈中段姿勢，兩腳間隔約15公分，右腳在前，左腳尖與右腳跟成水平對齊。\n
        右腳貼地，左腳跟稍離地面。
    </string>
    <string name="suriAshiInstruction_2">
        step.2\n
        -右腳先向前滑動。
    </string>
    <string name="suriAshiInstruction_3">
        step.3\n
        -左腳緊跟著右腳往前滑動，恢復中段姿勢。
    </string>

    <string name="wakiKiamaeInstruction">
        -雙手垂掛持刀，刀柄向上，刀尖向右側腰下方斜掛。
    </string>

    <string name="douUchiInstruction_1">
        step.1\n
        -中段姿勢:左手握刀柄端部，對準自己的腹部中央(或中下)，離身體約一個拳頭的位置。\n
        -右手握刀柄上部，刀尖向正斜上方，對淮對手咽喉部位。
    </string>
    <string name="douUchiInstruction_2">
        step.2\n
        -上段姿勢:握劍方式與中段方式相同，不同處在於將竹劍舉至頭上，劍尖向上45度。
    </string>
    <string name="douUchiInstruction_3">
        step.3\n
        -揮劍: 揮劍時迅速將刀向頭左側迴轉，然後劈擊對手的右胴部位。
    </string>

    <string name="drawHistroyDetailsTitle">詳細記錄資料</string>
    <string name="drawHistroyDetailsS1">單次平均出力(Nt) vs. 揮擊次數</string>
    <string name="drawHistroyDetailsS2">單次角度變化(°) vs. 揮擊次數</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
