<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage"
    android:id="@+id/myDrawerLayout"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TrainingView">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:minHeight="?attr/actionBarSize"

            android:textColor="#fff"
            android:theme="@style/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/grey_blue_98a1a7"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/hamster_blue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/btnMotionList"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="@drawable/ripple_main"
                android:text="@string/mainItem1"
                android:textColor="@color/dark_green_646857"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btnTrainingMenu"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="@drawable/ripple_main"
                android:text="@string/mainItem2"
                android:textColor="@color/dark_green_646857"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btnHistory"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="@drawable/ripple_main"
                android:text="@string/mainItem3"
                android:textColor="@color/dark_green_646857"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btnSettings"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="@drawable/ripple_main"
                android:text="@string/mainItem4"
                android:textColor="@color/dark_green_646857"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer"
        >


    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>
